--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^6.2.1
   supabase_auth_ui: ^0.5.0
   flutter_dotenv: ^5.1.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
