--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   riverpod_annotation: ^2.3.5
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
+  just_audio: ^0.9.39
+  audio_video_progress_bar: ^2.0.3
 
 dev_dependencies:
   flutter_test:
