added amplitude, tempo and pitch

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   json_annotation: ^4.9.0
   just_audio: ^0.9.39
   audio_video_progress_bar: ^2.0.3
+  ffmpeg_kit_flutter: ^6.0.3
+  record: ^5.1.2
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
